--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -7,7 +7,7 @@
         <div><h3>Deactivate Your Profile</h3></div>
 
         <div class="w-70 mb-2p">
-            <p class="no-top-margin">Please note that you will not be able to sign-in after deactivation. Your profile and its associated data will be deleted 30 days after deactivation.</p>
+            <p class="mt-0">Please note that you will not be able to sign-in after deactivation. Your profile and its associated data will be deleted 30 days after deactivation.</p>
                 {% csrf_token %}
                 <button id="submitDeactivation" class="primary-btn white-btn">Deactivate Profile</button>
         </div>
@@ -19,7 +19,7 @@
             <div class="w-100">
     
                 <div>
-                    <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                    <h2 class="primary-black-text mt-0">Are you sure?</h2>  
                     <p>Are you sure you want to deactivate your profile? <br><br>
                         This cannot be undone and you will be automatically logged out. <br></p>  
                 </div>
