--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -38,7 +38,7 @@
         <div class="modal-defaults deactivate-modal flex-this column w-100">
             <div class="w-100">
                 <div>
-                    <h2 class="primary-black-text no-top-margin">Are you sure you want to unlink the Google account?</h2>  
+                    <h2 class="primary-black-text mt-0">Are you sure you want to unlink the Google account?</h2>  
                     <p>You'll need to use your user name {{ request.user.username }} and password next time you login.</p>  
                 </div>
                 <div class="flex-this w-100 text-align-center">
