--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -14,7 +14,7 @@
                 <div class="newsletter-form">
                     <div>
                         <img class="w-25 h-25" src="{% static 'images/logos/sm-logo-registry.png' %}" alt="">
-                        <h1 class="no-top-margin">Subscribe to the Local Contexts Newsletter</h1>
+                        <h1 class="mt-0">Subscribe to the Local Contexts Newsletter</h1>
                         <p class="w-70">
                             Each issue of the Local Contexts Newsletter includes updates on some of the real-life applications of the Labels and Notices, news,
                             upcoming events, and much more. New issues of the Newsletter will be released seasonally, aligning with the ebbs and flows of our natural
