--- a/templates/accounts/password-reset-confirm.html
+++ b/templates/accounts/password-reset-confirm.html
@@ -3,7 +3,7 @@
     <div class="flex-this column w-90">
 
         <h2> Enter new password</h2>
-        <p class="no-top-margin">Enter your new password twice so it can be verified.</p>
+        <p class="mt-0">Enter your new password twice so it can be verified.</p>
 
         <form method="POST">
             {% csrf_token %}
