--- a/templates/accounts/password-reset-done.html
+++ b/templates/accounts/password-reset-done.html
@@ -3,7 +3,7 @@
 {% block card %}
     <div class="flex-this column w-90">
         <h2 class="mb-2p">Password reset complete</h2>
-        <p class="no-top-margin">
+        <p class="mt-0">
             Your password has been reset successfully. You can now <a class="default-a" href="{% url 'login' %}">login</a>.
         </p>                               
     </div>
