--- a/templates/accounts/password-reset-sent.html
+++ b/templates/accounts/password-reset-sent.html
@@ -2,7 +2,7 @@
 {% block card %}
     <div class="flex-this column w-90">
         <h2 class="mb-2p">Password reset link sent</h2>
-        <p class="no-top-margin">
+        <p class="mt-0">
             Check your email for a password reset link which should arrive in your inbox shortly.<br>
             If you don't receive an email, please make sure you entered the address you registered with 
             and check your spam folder.<br><br>
