--- a/templates/accounts/password-reset.html
+++ b/templates/accounts/password-reset.html
@@ -2,7 +2,7 @@
 {% block card %}
     <div class="flex-this column w-90">
         <h2 class="mb-2p">Reset your password</h2>
-        <p class="no-top-margin">
+        <p class="mt-0">
             Forgot your password? <br> 
             Please enter the email address you registered with and we will send you instructions for setting a new one.
         </p>
