--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -3,7 +3,7 @@
     <div class="w-90">
         {% if community %}
             {% if environment == "SANDBOX" %}
-                <h2 class="no-top-margin">Creating a community account on the sandbox Hub</h2>
+                <h2 class="mt-0">Creating a community account on the sandbox Hub</h2>
                 <p class="bold">
                     Please note the following before creating a community account:
                 </p>
@@ -25,7 +25,7 @@
                     <br><br> 
                 </p>  
             {% else %}
-                <h2 class="no-top-margin">Creating a Community Account</h2>
+                <h2 class="mt-0">Creating a Community Account</h2>
                 <p class="bold">
                     Please note the following before creating a community account:
                 </p>
@@ -54,7 +54,7 @@
         
         {% if institution %}
             {% if environment == "SANDBOX" %}
-                <h2 class="no-top-margin">Creating an institution account on the sandbox Hub</h2>
+                <h2 class="mt-0">Creating an institution account on the sandbox Hub</h2>
                 <p class="bold">
                     Please note the following before creating an institution account:
                 </p>
@@ -77,7 +77,7 @@
                     please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a>.
                 </p>
             {% else %}
-                <h2 class="no-top-margin">Creating an Institution Account</h2>
+                <h2 class="mt-0">Creating an Institution Account</h2>
                 <p class="bold">
                     Please note the following before creating an institution account:
                 </p>
@@ -106,7 +106,7 @@
 
         {% if researcher %}
             {% if environment == "SANDBOX" %}
-                <h2 class="no-top-margin">Creating a researcher account on the sandbox Hub</h2>
+                <h2 class="mt-0">Creating a researcher account on the sandbox Hub</h2>
                 <p class="bold">
                     Please note the following before creating a researcher account:
                 </p>
@@ -122,7 +122,7 @@
                     <br><br>
                 </p>
             {% else %}
-                <h2 class="no-top-margin">Creating a Researcher Account</h2>
+                <h2 class="mt-0">Creating a Researcher Account</h2>
                 <p class="bold">
                     Please note the following before creating a researcher account:
                 </p>
