--- a/templates/accounts/projects-board.html
+++ b/templates/accounts/projects-board.html
@@ -6,7 +6,7 @@
 
         <div>
             <h2 class="no-bottom-margin">Local Contexts Projects Board</h2><br>
-            <p class="no-top-margin w-80">
+            <p class="mt-0 w-80">
                 This Project Board shows all public Projects created on the Local Contexts Hub. View a Project to see additional details.
             </p>
         </div>
