--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div class="register-text">
-  <p class="no-top-margin">
+  <p class="mt-0">
     Welcome to Local Contexts! We are so happy to see you, let’s get started.
   </p>
 </div>
