--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -6,7 +6,7 @@
 
         <div>
             <h2 class="no-bottom-margin">The Local Contexts Registry</h2><br>
-            <p class="no-top-margin w-80">
+            <p class="mt-0 w-80">
                 This is the registry for accounts that are registered with the Local Contexts Hub. Visit an account's public page to contact or request to join, and to view public projects, 
                 Open to Collaborate Notices, and Labels in use. <br><br>
 
