--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -2,7 +2,7 @@
 
 <div class="flex-this column">
     <div>
-        <h2 class="no-top-margin">Choose an account</h2>
+        <h2 class="mt-0">Choose an account</h2>
         <p>Local Contexts has three types of accounts. You can choose to join an existing account or create a new account. You can be a member of multiple accounts.</p>
 
         <div class="flex-this row space-between">
@@ -18,7 +18,7 @@
                 </div>
                 <div><img loading="lazy" class="tiny-label pointer-event-none" src="{% static 'images/tk-labels/tk-attribution.png' %}" alt="TK Attribution Label icon. Black tag shape with two stacked white arrows, one pointing left and one pointing right."></div>
                 <p><strong>Who?</strong> An Indigenous or local community entity or representative</p>
-                <p class="no-top-margin"><strong>What?</strong> Customize and apply TK and BC Labels, and create Projects</p>
+                <p class="mt-0"><strong>What?</strong> Customize and apply TK and BC Labels, and create Projects</p>
                 <a href="{% url 'connect-community' %}" class="primary-btn white-btn-select">Join</a>
                 <a href="{% url 'prep-community' %}" class="primary-btn white-btn-select">Create</a>
             </div>
