--- a/templates/accounts/update-profile.html
+++ b/templates/accounts/update-profile.html
@@ -3,7 +3,7 @@
 {% block settings %}
 <div class="flex-this column w-50   mr-1p">
     <div class="flex-this space-between">
-        <div><h3 class="no-top-margin">Profile Information</h3></div>
+        <div><h3 class="mt-0">Profile Information</h3></div>
         <div>User Name: {{ request.user.username }}</div>
         <div>User ID: {{ request.user.id }}</div>
     </div>
