--- a/templates/admin/partials/_data-visuals.html
+++ b/templates/admin/partials/_data-visuals.html
@@ -14,15 +14,15 @@
             <div class="flex-this justify-center wrap">
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #108670;"></div>
-                    <p class="no-top-margin margin-left-8 margin-right-8">Community</p>
+                    <p class="mt-0 margin-left-8 margin-right-8">Community</p>
                 </div>
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                    <p class="no-top-margin margin-left-8 margin-right-8">Institution</p>
+                    <p class="mt-0 margin-left-8 margin-right-8">Institution</p>
                 </div>
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                    <p class="no-top-margin margin-left-8 margin-right-8">Researcher</p>
+                    <p class="mt-0 margin-left-8 margin-right-8">Researcher</p>
                 </div>
             </div>
         </div>
@@ -43,19 +43,19 @@
         <div class="flex-this justify-center wrap">
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">Engagement Notice</p>
+                <p class="mt-0 margin-left-8 margin-right-8">Engagement Notice</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">Disclosure Notice</p>
+                <p class="mt-0 margin-left-8 margin-right-8">Disclosure Notice</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #108670;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">Labels Applied</p>
+                <p class="mt-0 margin-left-8 margin-right-8">Labels Applied</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #64748B;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">No Activity</p>
+                <p class="mt-0 margin-left-8 margin-right-8">No Activity</p>
             </div>
         </div>
     </div>
@@ -70,11 +70,11 @@
         <div class="flex-this justify-center wrap">
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">TK Labels</p>
+                <p class="mt-0 margin-left-8 margin-right-8">TK Labels</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                <p class="no-top-margin margin-left-8 margin-right-8">BC Labels</p>
+                <p class="mt-0 margin-left-8 margin-right-8">BC Labels</p>
             </div>
         </div>
     </div>
@@ -122,9 +122,9 @@
         <h1 class="center-text">Hub Activity</h1>
         <div class="flex-this justify-center">
             <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-            <p class="margin-left-8 mr-1p no-top-margin">New Users</p>
+            <p class="margin-left-8 mr-1p mt-0">New Users</p>
             <div class="tooltip" style="cursor: default;background-color: #3876aa;"></div>
-            <p class="margin-left-8 mr-1p no-top-margin">New Projects</p>
+            <p class="margin-left-8 mr-1p mt-0">New Projects</p>
         </div>
         <div style="height: 400px;">
             <canvas id="newUsers"></canvas>
