--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -112,7 +112,7 @@
         }
     </style>
     <div class="w-90" id="define-community-body">
-        <h2 class="no-top-margin">Search the Native Land Digital database</h2>
+        <h2 class="mt-0">Search the Native Land Digital database</h2>
         <p id="define-community-top-text">
             Search the Native Land Digital database to select your community’s boundary.
             After making a selection, view the location on Native Land Digital’s website to confirm
