--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -6,7 +6,7 @@
         <div class="content-card-v2 content-card-space">
             <div class="flex-this space-between">    
                 <div class="w-80">
-                    <h2 class="no-bottom-margin no-top-margin">Approve Label</h2>
+                    <h2 class="no-bottom-margin mt-0">Approve Label</h2>
                     <p>Unapproved Labels need to be approved by a secondary person (admin or editor) of the community. <br>
                         If you would like to request changes to or deny approval for this Label, select 'No', then
                         include a reason in the textbox that appears.<br><br>
@@ -31,7 +31,7 @@
             <div class="margin-top-8">
                 <div class="flex-this space-between margin-bottom-8">
                     <div>
-                        <h4 class="no-top-margin">Please add a note to request changes or give reason for not approving this Label.</h4>
+                        <h4 class="mt-0">Please add a note to request changes or give reason for not approving this Label.</h4>
                     </div>
                     <div>
                         <button id="closeNoteDiv" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="content-card-v2 content-card-space"> 
-            <h2 class="no-top-margin">Proposed Edit</h2>
+            <h2 class="mt-0">Proposed Edit</h2>
             <div class="flex-this margin-bottom-8 margin-top-8 about-this-label">
                 <div class="w-20 margin-left-16 margin-top-16 margin-bottom-16">
                     {% if bclabel %}
