--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -31,7 +31,7 @@
         }
     </style>
     <div class="w-90">
-        <h2 class="no-top-margin">Add community boundary</h2>
+        <h2 class="mt-0">Add community boundary</h2>
         <p>
             Enhance your community’s visibility on the Hub by adding your community boundaries.
             In future development of the Hub, this information will help to connect you with your
