--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -1,7 +1,7 @@
 {% extends 'account-base.html' %} {% block title %} Connections {% endblock %}{% load static %} {% block community_content %}{% load custom_project_tags %}{% load custom_tags %}
     <div class="content-card-v2 content-card-space">
         <div class="w-70">
-            <h2 class="no-top-margin">Connections</h2>
+            <h2 class="mt-0">Connections</h2>
             <p>
                 Connections are established when Labels are applied to a Project.
                 Here you can see all the accounts that have notified your community of a Project where you have applied Labels.
