--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -82,7 +82,7 @@
 
         <div class="flex-this space-between">
             <div class="flex-this">
-                <h2 class="primary-black-text no-top-margin">Request to join</h2>
+                <h2 class="primary-black-text mt-0">Request to join</h2>
                 <div class="tooltip" style="margin-top: 7px; margin-left: 5px;"><strong>i</strong>
                     <span class="tooltiptext">
                         <strong>You should request to join community and institution accounts you are already affiliated with. </strong> <br><br>
@@ -97,7 +97,7 @@
 
         <div class="w-100">
             <div>
-                <p class="no-top-margin">Every account has various responsibilities within the community.<br>
+                <p class="mt-0">Every account has various responsibilities within the community.<br>
                     <strong>Administrator:</strong> responsible for adding, editing and removing members<br>
                     <strong>Editor:</strong> responsible for customizing Labels and Projects<br>
                     <strong>Viewer:</strong> can view activity happening on the hub
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="flex-this space-between w-100">
-                    <p class="w-70 no-top-margin">
+                    <p class="w-70 mt-0">
                         <small>By sending this request, you consent for your message and email address to be shared with account administrators.</small>
                     </p>
                     <div>
