--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="content-card content-card-space white-bg">
-    <h2 class="no-top-margin">Notices</h2>
-    <p class="no-top-margin w-70">
+    <h2 class="mt-0">Notices</h2>
+    <p class="mt-0 w-70">
         Institutions and researchers can only generate Notices. Applying Notices allows institutions and researchers to engage, acknowledge, and make visible Indigenous interests in collections, information, and data. Notices are a precursor for communities to add their Labels to a project if they choose. <br><br>
         We recommend beginning with the Open to Collaborate Notice, which you can download from this page without creating a Project. To apply the disclosure Notices, you will create a Project to describe the context.
     </p>
@@ -10,7 +10,7 @@
 <div class="content-card content-card-space white-bg">
 
     <div class="flex-this space-between">
-        <div><h2 class="no-top-margin">Engagement Notice</h2></div>
+        <div><h2 class="mt-0">Engagement Notice</h2></div>
 
         <div class="flex-this flex-end">
             <div class="margin-right-16 circle-dropdown">
@@ -47,9 +47,9 @@
         <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle."></div>
         <div class="flex-this column margin-left-16">
             <div class="w-90">
-                <h3 class="no-top-margin">Open to Collaborate</h3>
+                <h3 class="mt-0">Open to Collaborate</h3>
 
-                <p class="no-top-margin">                    
+                <p class="mt-0">                    
                     <span class="bold">Why Use this Notice?</span><br>
                     The Engagement Notice, the Open to Collaborate Notice, indicates that a researcher or an institution is committed to developing new modes of collaboration, engagement, and partnership over Indigenous collections and data that have colonial and/or problematic histories or unclear provenance. This Notice indicates a commitment to change and to develop new processes for the care and stewardship of past and future heritage collections. We recommend beginning with the Open to Collaborate Notice.               
                 </p>
@@ -99,7 +99,7 @@
 <div class="content-card content-card-space white-bg">
     <div class="flex-this space-between">
         <div>
-            <h2 class="no-top-margin">Disclosure Notices</h2>
+            <h2 class="mt-0">Disclosure Notices</h2>
         </div>
         <div>
             {% if researcher %}
@@ -157,8 +157,8 @@
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
-                        <h2 class="no-top-margin">Traditional Knowledge Notice</h2>
-                        <p class="no-top-margin">
+                        <h2 class="mt-0">Traditional Knowledge Notice</h2>
+                        <p class="mt-0">
                             <span class="bold">Why Use this Notice?</span><br>
                             This Notice should be used to recognize that place-based knowledge carries accompanying cultural rights and responsibilities and that appropriate permissions may need to be sought for future use of this material.
                         </p>        
@@ -179,8 +179,8 @@
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
-                        <h2 class="no-top-margin">Biocultural Notice</h2>
-                        <p class="no-top-margin">
+                        <h2 class="mt-0">Biocultural Notice</h2>
+                        <p class="mt-0">
                             <span class="bold">Why Use this Notice?</span><br>
                             The BC Notice should be used to recognize the rights of Indigenous peoples to permission the use of information, collections, data and digital sequence information generated from the biodiversity and genetic resources associated with their traditional lands, waters, and territories. It acknowledges the importance of cultural protocols and recognizes that appropriate permissions may need to be sought for future use of this material or data.
                         </p>        
@@ -201,8 +201,8 @@
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line."></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
-                        <h2 class="no-top-margin">Attribution Incomplete Notice</h2>
-                        <p class="no-top-margin">
+                        <h2 class="mt-0">Attribution Incomplete Notice</h2>
+                        <p class="mt-0">
                             <span class="bold">Why Use this Notice?</span><br>
                             The Attribution Incomplete Notice is attached to a collection or at an item level where there is incomplete, inaccurate, or missing attribution. This Notice indicates to the public that the record and/or metadata is incomplete. Visibly identifying missing attribution within collections is the first step towards correcting existing attribution to include: contributors, collaborators, other authors and/or communities of origin.
                         </p>        
@@ -225,7 +225,7 @@
 {% if institution %}
     <div class="content-card content-card-space white-bg">
         <div class="flex-this space-between">
-            <div><h2 class="no-top-margin">Collections Care Notices</h2></div>
+            <div><h2 class="mt-0">Collections Care Notices</h2></div>
             <div class="flex-this flex-end">
                 
                 <div class="margin-right-16"><a id="openCCNoticeModal" class="primary-btn action-btn">Add Policy <i class="fa-solid fa-circle-plus"></i></a></div>
@@ -321,7 +321,7 @@
                     <div id="openDiv-authorization" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-authorization.png' %}" width="119px" alt="Authorization Collections Care Notice icon. White square with top right corner folded. Inside are three black lines from the left edge curving up to cradle a black circle and one black line from bottom right edge curving up."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Authorization</h2></div>
+                            <div><h2 class="mt-0">Authorization</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -337,7 +337,7 @@
                     <div id="openDiv-belonging" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-belonging.png' %}" width="119px" alt="Belonging Collections Care Notice icon. White square with top right corner folded. Inside are three black circles in descending size from top to bottom, each with two lines like arms extending down to touch the figure below."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Belonging</h2></div>
+                            <div><h2 class="mt-0">Belonging</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -352,7 +352,7 @@
                     <div id="openDiv-caring" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-caring.png' %}" width="119px" alt="Caring Collections Care Notice icon. White square with top right corner folded. Inside are two wave-like curved lines extending from the edge toward the center which curve around a black circle."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Caring</h2></div>
+                            <div><h2 class="mt-0">Caring</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -367,7 +367,7 @@
                     <div id="openDiv-gender-aware" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-gender-aware.png' %}" width="119px" alt="Gender Aware Collections Care Notice icon. White square with top right corner folded. Inside are three circles in a diagonal. One has white shading, one has black shading, one has striped shading."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Gender Aware</h2></div>
+                            <div><h2 class="mt-0">Gender Aware</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -382,7 +382,7 @@
                     <div id="openDiv-leave-undisturbed" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-leave-undisturbed.png' %}" width="119px" alt="Leave Undisturbed Collections Care Notice icon. White square with top right corner folded. Circle outline made of two black lines that radiate from a central black circle at center and curve to form the outline."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Leave Undisturbed</h2></div>
+                            <div><h2 class="mt-0">Leave Undisturbed</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -397,7 +397,7 @@
                     <div id="openDiv-safety" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-safety.png' %}" width="119px" alt="Safety Collections Care Notice icon. White square with top right corner folded. Inside is a circle made of three black curved lines surrounding a black circle."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Safety</h2></div>
+                            <div><h2 class="mt-0">Safety</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -412,7 +412,7 @@
                     <div id="openDiv-viewing" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-viewing.png' %}" width="119px" alt="Viewing Collections Care Notice icon. White square with top right corner folded. Insides are two horizontal curved black lines surrounding a small black circle."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Viewing</h2></div>
+                            <div><h2 class="mt-0">Viewing</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -428,7 +428,7 @@
                     <div id="openDiv-withholding" class="flex-this cc-notice__expanded-container hide">
                         <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-withholding.png' %}" width="119px" alt="Withholding Collections Care Notice icon. White square with top right corner folded. Inside are two curved black lines from the bottom edge surrounding a small black circle."></div>
                         <div class="cc-notice__expanded-text">
-                            <div><h2 class="no-top-margin">Withholding</h2></div>
+                            <div><h2 class="mt-0">Withholding</h2></div>
 
                             <p>
                                 <span class="bold">Why use this Notice?</span><br>
@@ -454,7 +454,7 @@
                     {% csrf_token %}
     
                     <div class="flex-this space-between">
-                        <div><h2 class="primary-black-text no-top-margin">Add Collections Care Notice Policy</h2></div>
+                        <div><h2 class="primary-black-text mt-0">Add Collections Care Notice Policy</h2></div>
                         <div>
                             <div id="closeCCNoticeModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
                         </div>            
@@ -496,7 +496,7 @@
                 {% csrf_token %}
 
                 <div class="flex-this space-between">
-                    <div><h2 class="primary-black-text no-top-margin">Add Open to Collaborate Notice Link</h2></div>
+                    <div><h2 class="primary-black-text mt-0">Add Open to Collaborate Notice Link</h2></div>
                     <div>
                         <div id="closeAddURLModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
                     </div>            
@@ -532,7 +532,7 @@
 
         <div class="flex-this space-between">
             <div class="w-80">
-                <h2 class="primary-black-text no-top-margin">Share Open to Collaborate Notice</h2>  
+                <h2 class="primary-black-text mt-0">Share Open to Collaborate Notice</h2>  
             </div>
             <div>
                 <div id="closeshareOTCNoticeModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
@@ -549,7 +549,7 @@
                 </div>
 
                 <label class="bold margin-top-8 no-bottom-margin block">Embed Open to Collaborate Notice</label>
-                <p class="font-size-14 no-top-margin margin-bottom-8">Add this Notice to your website by copying the code below.</p>
+                <p class="font-size-14 mt-0 margin-bottom-8">Add this Notice to your website by copying the code below.</p>
 
                 <div class="text-input-to-copy">
                     <input class="w-100 grey-chip" type="text" 
