--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -192,7 +192,7 @@
                                     <div class="w-100">
                             
                                         <div>
-                                            <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                                            <h2 class="primary-black-text mt-0">Are you sure?</h2>  
                                             <p>Are you sure you want to remove your account as a contributor on this Project?</p>  
                                         </div>
                                         <form method="POST" action="">
@@ -241,7 +241,7 @@
                         </div>
                         
 
-                        <p class="no-top-margin">
+                        <p class="mt-0">
                             <span class="bold">Providers ID</span><br>
                             {{ project.providers_id }}<br><br>
 
@@ -361,7 +361,7 @@
                                                     {% include 'bclabels/which-label.html' %} 
                                                 </div>
                                                 <div class="margin-left-16">
-                                                    <p class="no-top-margin bold">{{bclabel.name}} </p><br>
+                                                    <p class="mt-0 bold">{{bclabel.name}} </p><br>
                                                 </div>
                                             </div>
             
@@ -386,7 +386,7 @@
                                                     {% include 'tklabels/which-label.html' %} 
                                                 </div>
                                                 <div class="margin-left-16">
-                                                    <p class="no-top-margin bold">{{ tklabel.name }} </p><br>
+                                                    <p class="mt-0 bold">{{ tklabel.name }} </p><br>
                                                 </div>
                                             </div>
             
@@ -528,7 +528,7 @@
 
                                                     <div class="flex-this space-between margin-bottom-16">
                                                         <div class="w-80">
-                                                            <h2 class="primary-black-text no-top-margin">Remove Project Connection</h2>  
+                                                            <h2 class="primary-black-text mt-0">Remove Project Connection</h2>  
                                                             <p>Are you sure you want to remove this connection?</p>  
                                                         </div>
                                                         <div>
@@ -611,7 +611,7 @@
     <!-- ACTIONS  -->
     <div class="margin-left-16">
         <div class="actions-card content-card-space flex-this column">
-            <h3 class="no-top-margin">Actions</h3>
+            <h3 class="mt-0">Actions</h3>
 
             {% if request.user.is_authenticated %}
                 {% if 'projects/actions/' in request.path %}
@@ -726,7 +726,7 @@
 
                         <div class="flex-this space-between">
                             <div class="w-80">
-                                <h2 class="primary-black-text no-top-margin">Share Project</h2>  
+                                <h2 class="primary-black-text mt-0">Share Project</h2>  
                             </div>
                             <div>
                                 <div id="closeShareProjectModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
@@ -749,7 +749,7 @@
                                 </div>
 
                                 <label class="bold margin-top-8 no-bottom-margin block">Embed Project</label>
-                                <p class="font-size-14 no-top-margin margin-bottom-8">Add this project's identifiers to your website by copying the code below.</p>
+                                <p class="font-size-14 mt-0 margin-bottom-8">Add this project's identifiers to your website by copying the code below.</p>
     
                                 <div class="text-input-to-copy">
                                     <input class="w-100 grey-chip" value='<iframe width="100%" height="150" src="{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}" title="Local Contexts Project Identifiers" frameborder="0"></iframe>' type="text" data-url='{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}' title="Local Contexts Project Identifiers" id="embedToCopy" readonly>
@@ -899,7 +899,7 @@
                                 <div class="w-100">
                     
                                     <div>
-                                        <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                                        <h2 class="primary-black-text mt-0">Are you sure?</h2>  
                                         <p>Are you sure you want to delete your Project? <br>
                                             This will delete the Project for everyone and cannot be undone. <br><br>
                                             <small>You will be redirected to the Projects page.</small> <br>
@@ -937,7 +937,7 @@
             {% if not '/actions/' in request.path %}
                 {% if communities or institutions or user_researcher %}
                     <div class="actions-card content-card-space flex-this column">
-                        <h3 class="no-top-margin">View As 
+                        <h3 class="mt-0">View As 
                             <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
                                 <span class="tooltiptext">
                                     You are viewing what this Project looks like publicly. To access the action page as a contributor on this Project, select an account below.
@@ -964,7 +964,7 @@
                 {% endif %}
             {% else %}
                 <div class="actions-card content-card-space flex-this column">
-                    <h3 class="no-top-margin">View As 
+                    <h3 class="mt-0">View As 
                         <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
                             <span class="tooltiptext">
                                 You are viewing the action page of this Project, which is only accessible to contributors. Use this button to see what this Project looks like publicly.
@@ -988,7 +988,7 @@
         {% if community or researcher or institution %}
             <div class="actions-card-notifified content-card-space flex-this column">
                 <div class="flex-this">
-                    <h3 class="no-top-margin no-bottom-margin">Communities Notified</h3>
+                    <h3 class="mt-0 no-bottom-margin">Communities Notified</h3>
                     <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
                         <span class="tooltiptext">
                             <i class="bold">Seen</i><br> The community has acknowledged the Project but has not made a decision about applying Labels.<br>
@@ -1038,7 +1038,7 @@
                     {% csrf_token %}
 
                     <div class="flex-this space-between">
-                        <div><h2 class="primary-black-text no-top-margin">Notify Communities</h2></div>
+                        <div><h2 class="primary-black-text mt-0">Notify Communities</h2></div>
                         <div>
                             <div id="closeNotifyModal" class="close-modal-btn pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
                         </div>            
@@ -1099,7 +1099,7 @@
                     {% csrf_token %}
 
                     <div class="flex-this space-between">
-                        <div><h2 class="primary-black-text no-top-margin">Connect Existing Projects</h2></div>
+                        <div><h2 class="primary-black-text mt-0">Connect Existing Projects</h2></div>
                         <div>
                             <div id="closeLinkProjectsModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
                         </div>            
@@ -1136,7 +1136,7 @@
     <div class="modal-defaults deactivate-modal flex-this column w-100">
         <div class="w-100">
             <div>
-                <h5 class="primary-black-text no-top-margin">This account needs to be confirmed before public view is available to others.</h5>  
+                <h5 class="primary-black-text mt-0">This account needs to be confirmed before public view is available to others.</h5>  
             </div>
             <div class="flex-this w-100 text-align-center">   
                 <div class="ml-1p primary-btn action-btn" onclick="cancelDisclaimer()">OK</div>
