--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -47,7 +47,7 @@
     }
 </script>
 <div class="flex-this space-between">
-    <div><h2 class="no-top-margin">Community Boundary</h2></div>
+    <div><h2 class="mt-0">Community Boundary</h2></div>
 </div>
 <div>
     Add your community boundary by searching the Native Land Digital database or uploading a shapefile.
