--- a/templates/projects/project-status.html
+++ b/templates/projects/project-status.html
@@ -5,7 +5,7 @@
         <div class="actions-card content-card-space flex-this column">
 
             <div class="flex-this">
-                <h3 class="no-top-margin no-bottom-margin">Project Status</h3>
+                <h3 class="mt-0 no-bottom-margin">Project Status</h3>
                 <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
                     <span class="tooltiptext">
                         This project has been sent to your community because this account wants to know whether or not your community would like to apply Labels to this project. <br><br>
