--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -4,7 +4,7 @@
     <div class="content-card content-card-space white-bg">
 
         <div class="flex-this space-between">
-            <div class="w-60"><h2 class="no-top-margin">Local Contexts Projects</h2></div>
+            <div class="w-60"><h2 class="mt-0">Local Contexts Projects</h2></div>
 
             {% if community or institution %}
                 {% if member_role == 'admin' or member_role == 'editor' %}
@@ -26,7 +26,7 @@
             {% endif %}
         </div>
         <div class="w-70">
-            <p class="no-top-margin">
+            <p class="mt-0">
                 {% if institution or researcher %}
                     Institutions and researchers can only generate Notices. Institutions and researchers generate Notices by creating a Project within the Local Contexts Hub. 
                     Local Contexts projects describe the context where Notices are being applied. For example, a project could include: a website, a university syllabus, a dissertation, 
