--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -4,7 +4,7 @@
 <div
   class="content-card-v2 content-card-space flex-this column settings-height"
 >
-  <h2 class="no-top-margin">User Settings</h2>
+  <h2 class="mt-0">User Settings</h2>
 
   <div class="flex-this w-100">
     <div class="side-nav-container">
@@ -16,7 +16,7 @@
             <i class="fa-solid fa-circle-user fa-3x"></i>
           </div>
           <div>
-            <p class="no-top-margin">
+            <p class="mt-0">
               <strong>Profile</strong><br />Contact name, email, location
             </p>
           </div>
@@ -29,7 +29,7 @@
         >
           <div><i class="fa-solid fa-user-group"></i></div>
           <div>
-            <p class="no-top-margin">
+            <p class="mt-0">
               <strong>Accounts</strong><br />Manage your accounts
             </p>
           </div>
@@ -42,7 +42,7 @@
         >
           <div><i class="fa-solid fa-link-simple"></i></div>
           <div>
-            <p class="no-top-margin">
+            <p class="mt-0">
               <strong>Linked Accounts</strong><br />Google
             </p>
           </div>
@@ -55,7 +55,7 @@
         >
           <div><i class="fa fa-key" aria-hidden="true"></i></div>
           <div>
-            <p class="no-top-margin">
+            <p class="mt-0">
               <strong>Password</strong><br />Change your password
             </p>
           </div>
@@ -67,7 +67,7 @@
                     <div class="side-nav-item {% if 'apikey' in request.path %} selected {% else %} grey-text {% endif %}">
                         <div class="w-20 margin-right-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
                         <div class="w-80">
-                            <p class="no-top-margin"><strong>API Key</strong><br>Manage API Key</p>
+                            <p class="mt-0"><strong>API Key</strong><br>Manage API Key</p>
                         </div>
                     </div>
                 </a>
@@ -81,7 +81,7 @@
             <i class="fa fa-power-off fa-3x" aria-hidden="true"></i>
           </div>
           <div class="w-80">
-            <p class="no-top-margin">
+            <p class="mt-0">
               <strong>Deactivate</strong><br />Deactivate your profile
             </p>
           </div>
