--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -97,7 +97,7 @@
                     <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                         <div class="w-15 pad-top-1"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                         <div class="w-80 pad-top-1">
-                            <h3 class="no-top-margin">{{ notice.name }}</h3>
+                            <h3 class="mt-0">{{ notice.name }}</h3>
                             <p>
                                 {{ notice.default_text }}
                                 <br> For more information about the TK Notices click <a href="https://localcontexts.org/notice/tk-notice/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.
@@ -187,7 +187,7 @@
                     <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                         <div class="w-15 pad-top-1"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                         <div class="w-80 pad-top-1">
-                            <h3 class="no-top-margin">{{ notice.name }}</h3>
+                            <h3 class="mt-0">{{ notice.name }}</h3>
                             <p>
                                 {{ notice.default_text }}
                                 <br> For more information about the BC Notices click <a href="https://localcontexts.org/notice/bc-notice/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.
@@ -277,7 +277,7 @@
                     <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                         <div class="w-15 pad-top-1"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line."></div>
                         <div class="w-80 pad-top-1">
-                            <h3 class="no-top-margin">{{ notice.name }}</h3>
+                            <h3 class="mt-0">{{ notice.name }}</h3>
                             <p>
                                 {{ notice.default_text }} <br>
                                 For more information about the Attribution Incomplete Notice click <a href="https://localcontexts.org/notice/attribution-incomplete/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.
@@ -375,7 +375,7 @@
                     <div class="w-15 pad-top-1"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                     <div class="w-80 pad-top-1">
                         <div>
-                            <h3 class="no-top-margin">{{ notice.noticeName }}</h3>
+                            <h3 class="mt-0">{{ notice.noticeName }}</h3>
                             <p> 
                                 {{ notice.noticeDefaultText}} <br> 
                                 For more information about the TK Notices click <a href="https://localcontexts.org/notice/tk-notice/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.
@@ -452,7 +452,7 @@
                     <div class="w-15 pad-top-1"><img class="pointer-event-none" loading="lazy" src="{% static 'images/notices/bc-notice.png' %}" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                     <div class="w-80 pad-top-1">
                         <div>
-                            <h3 class="no-top-margin">Biocultural Notice</h3>
+                            <h3 class="mt-0">Biocultural Notice</h3>
                             <p>{{ notice.noticeDefaultText }} <br> For more information about the BC Notices click <a href="https://localcontexts.org/notice/bc-notice/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.</p>
                         </div>
 
@@ -527,7 +527,7 @@
                     <div class="w-15 pad-top-1"><img class="pointer-event-none" loading="lazy" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line."></div>
                     <div class="w-80 pad-top-1">
                         <div>
-                            <h3 class="no-top-margin">{{ notice.noticeName }}</h3>
+                            <h3 class="mt-0">{{ notice.noticeName }}</h3>
                             <p>
                                 {{ notice.noticeDefaultText }}
                                 For more information about the Attribution Incomplete Notice click <a href="https://localcontexts.org/notice/attribution-incomplete/" class="underline-hover" target="_blank" rel="noopener"><span class="darkteal-text">here</span></a>.
