--- a/templates/account_settings_pages/_community-boundary.html
+++ b/templates/account_settings_pages/_community-boundary.html
@@ -47,7 +47,7 @@
         }
     </script>
     <div class="flex-this space-between">
-        <div><h2 class="no-top-margin">Account Boundary</h2></div>
+        <div><h2 class="mt-0">Account Boundary</h2></div>
     </div>
     <div>Edit and manage your community boundary.</div>
     <hr class="border-hr">
@@ -81,7 +81,7 @@
 
     <div id="community-boundary-update" class="w-80">
         <div class="flex-this space-between">
-            <div><h2 class="no-top-margin">Community Boundary</h2></div>
+            <div><h2 class="mt-0">Community Boundary</h2></div>
         </div>
         <div>
             Add your community boundary by either searching the Native Land Digital database or uploading a shape file
