--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -1,9 +1,9 @@
 {% extends 'register-base.html' %} {% block title %} Create Profile {% endblock%} {% load static %} {% block card %} {% if user.is_authenticated %}
 
 <div class="flex-this column w-90">
-  <div><h2 class="no-top-margin">Create your personal profile</h2></div>
+  <div><h2 class="mt-0">Create your personal profile</h2></div>
   <div class="w-80">
-    <p class="no-top-margin">
+    <p class="mt-0">
       The information you provide here will be shared with other accounts you
       decide to join to help them identify who you are.
     </p>
