--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -49,7 +49,7 @@
         {% if not envi == "SANDBOX" %}
             <div class="flex-this column w-100 test-hub-div">
                 <div>
-                    <p class="no-top-margin">Interested in exploring the Local Contexts hub before registering? Explore our sandbox website where you can play around our tools.</p>
+                    <p class="mt-0">Interested in exploring the Local Contexts hub before registering? Explore our sandbox website where you can play around our tools.</p>
                 </div>
                 <div>
                     <a class="primary-btn green-btn block" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">Explore Sandbox</a></div>
