--- a/templates/accounts/newsletter-unsubscription.html
+++ b/templates/accounts/newsletter-unsubscription.html
@@ -7,7 +7,7 @@
                     {% if subscribed %}
                         <div>
                             <img class="w-25 h-25" src="{% static 'images/logos/sm-logo-registry.png' %}" alt="">
-                            <h1 class="no-top-margin">Update Newsletter Preferences</h1>
+                            <h1 class="mt-0">Update Newsletter Preferences</h1>
                             <p>Preferences for <a class="default-a" href="mailto:{{ email }}">{{ email }}</a></p>
                         </div>
 
@@ -51,7 +51,7 @@
                         </form>
                     {% else %}
                         <div>
-                            <h1 class="no-top-margin">You have been successfully unsubscribed.</h1>
+                            <h1 class="mt-0">You have been successfully unsubscribed.</h1>
                             <p>If this was a mistake and you would like to subscribe again, click <a class="default-a" href="{% url 'newsletter-subscription' %}">here</a>.</p>               
                         </div>
                     {% endif %}
