--- a/templates/accounts/verify.html
+++ b/templates/accounts/verify.html
@@ -3,10 +3,10 @@
 {% block card %}
     <div class="form-container">
         <div>
-            <h2 class="no-top-margin">Verify your email</h2>              
+            <h2 class="mt-0">Verify your email</h2>              
         </div>
         <div class="w-90">
-            <p class="no-top-margin">
+            <p class="mt-0">
                 <strong>A verification link has been sent to the email you provided.</strong><br>
                 <ul>
                     <li>Your email must be verified within 30 days in order to be activated.</li>
