--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -112,7 +112,7 @@
         }
     </style>
     <div class="w-90" id="define-community-body">
-        <h2 class="no-top-margin">Upload Shapefile</h2>
+        <h2 class="mt-0">Upload Shapefile</h2>
         <p id="define-community-top-text">
             Add your community boundary by uploading a shapefile.
             A shapefile is a vector data file format commonly used for geospatial analysis.
