--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -2,11 +2,11 @@
 
 <div class="flex-this column account-registration-container">
     <div class="flex-this space-between">
-        <div><h2 class="no-top-margin margin-bottom-8">Institution Account</h2></div>
+        <div><h2 class="mt-0 margin-bottom-8">Institution Account</h2></div>
         <div>Or <a class="default-a" href="{% url 'connect-institution' %}">request to join an existing institution</a>  </div>
     </div>
 
-    <p class="no-bottom-margin no-top-margin">
+    <p class="no-bottom-margin mt-0">
         The institution details provided below will default to a public display in the Local Contexts Registry.
         Providing your details will give consent to publicly being listed on the Registry.
         Read more about our privacy standards <a class="default-a" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
