--- a/templates/partials/_embed.html
+++ b/templates/partials/_embed.html
@@ -72,7 +72,7 @@
                                 
                                 {% elif layout == "3" %}
                                     <div id="notice-text">
-                                        <h3 style="margin-top: 0;margin-bottom: 0;">
+                                        <h3 class="mt-0" style="margin-bottom: 0;">
                                             {% if not lang or lang == 'en' %}
                                                 {% if notice.notice_type == 'traditional_knowledge' %}Traditional Knowledge Notice{% endif %}
                                                 {% if notice.notice_type == 'biocultural' %}Biocultural Notice{% endif %}
@@ -138,7 +138,7 @@
                                 </div>
                             {% elif layout == "3" %}
                                 <div id="notice-text">
-                                    <h3 style="margin-top: 0;margin-bottom: 0;">Open to Collaborate
+                                    <h3 class="mt-0" style="margin-bottom: 0;">Open to Collaborate
                                     </h3>
                                     <h4 style="margin-top: 10px;margin-bottom: 10px;">English</h4>
                                     <p style="margin-top: 10px;margin-bottom: 10px;">
@@ -185,7 +185,7 @@
                                                     <h4>{{ tklabel.name }}</h4>
                                                 
                                                 {% elif layout == "3" %}
-                                                    <h3 style="margin-top: 0;margin-bottom: 0;">{{ tklabel.name }}</h3>
+                                                    <h3 class="mt-0" style="margin-bottom: 0;">{{ tklabel.name }}</h3>
                                                     <h4 style="margin-top: 10px;margin-bottom: 10px;">English</h4>
                                                     <p style="margin-top: 10px;margin-bottom: 10px;">{{ tklabel.label_text}}</p>
                                                 {% endif %}
@@ -216,7 +216,7 @@
                                                 <h4>{{ tklabel.name }}</h4>
                                             
                                             {% elif layout == "3" %}
-                                                <h3 style="margin-top: 0;margin-bottom: 0;">{{ tklabel.name }}</h3>
+                                                <h3 class="mt-0" style="margin-bottom: 0;">{{ tklabel.name }}</h3>
                                                 <h4 style="margin-top: 10px;margin-bottom: 10px;">{{ tklabel.language }}</h4>
                                                 <p style="margin-top: 10px;margin-bottom: 10px;">{{ tklabel.label_text}}</p>
                                             {% endif %}
@@ -248,7 +248,7 @@
                                                         <h4>{{ translation.translated_name }}</h4>
 
                                                     {% elif layout == "3" %}
-                                                        <h3 style="margin-top: 0;margin-bottom: 0;">{{ translation.translated_name }}</h3>
+                                                        <h3 class="mt-0" style="margin-bottom: 0;">{{ translation.translated_name }}</h3>
                                                         <h4 style="margin-top: 10px;margin-bottom: 10px;">{{ translation.language }}</h4>
                                                         <p style="margin-top: 10px;margin-bottom: 10px;">{{ translation.translated_text }}</p>
                                                     {% endif %}
@@ -285,7 +285,7 @@
                                                     <h4>{{ bclabel.name }}</h4>
                                                 
                                                 {% elif layout == "3" %}
-                                                    <h3 style="margin-top: 0;margin-bottom: 0;">{{ bclabel.name }}</h3>
+                                                    <h3 class="mt-0" style="margin-bottom: 0;">{{ bclabel.name }}</h3>
                                                     <h4 style="margin-top: 10px;margin-bottom: 10px;">English</h4>
                                                     <p style="margin-top: 10px;margin-bottom: 10px;">{{ bclabel.label_text}}</p>
                                                 {% endif %}
@@ -316,7 +316,7 @@
                                                 <h4>{{ bclabel.name }}</h4>
                                             
                                             {% elif layout == "3" %}
-                                                <h3 style="margin-top: 0;margin-bottom: 0;">{{ bclabel.name }}</h3>
+                                                <h3 class="mt-0" style="margin-bottom: 0;">{{ bclabel.name }}</h3>
                                                 <h4 style="margin-top: 10px;margin-bottom: 10px;">{{ bclabel.language }}</h4>
                                                 <p style="margin-top: 10px;margin-bottom: 10px;">{{ bclabel.label_text}}</p>
                                             {% endif %}
@@ -348,7 +348,7 @@
                                                         <h4>{{ translation.translated_name }}</h4>
 
                                                     {% elif layout == "3" %}
-                                                        <h3 style="margin-top: 0;margin-bottom: 0;">{{ translation.translated_name }}</h3>
+                                                        <h3 class="mt-0" style="margin-bottom: 0;">{{ translation.translated_name }}</h3>
                                                         <h4 style="margin-top: 10px;margin-bottom: 10px;">{{ translation.language }}</h4>
                                                         <p style="margin-top: 10px;margin-bottom: 10px;">{{ translation.translated_text }}</p>
                                                     {% endif %}
