--- a/templates/partials/_member-requests.html
+++ b/templates/partials/_member-requests.html
@@ -13,7 +13,7 @@
             <span class="grey-text"> >> Member Requests</span>
         </small>
     </div>
-    <div><h2 class="no-top-margin">Member Requests</h2></div>
+    <div><h2 class="mt-0">Member Requests</h2></div>
 
     {% include 'partials/_alerts.html' %}
 </div>
@@ -28,7 +28,7 @@
                 
                 {% if member_role == 'admin' %}
                     <div class="flex-this dash-btn-container flex-end">
-                        <div class="no-top-margin margin-right-8">
+                        <div class="mt-0 margin-right-8">
                             <a 
                                 class="primary-btn white-btn" 
                                 {% if community %}
@@ -51,7 +51,7 @@
                         </div>
                         <div class="w-100">
                 
-                            <h2 class="no-top-margin primary-black-text">Accept a join request</h2>  
+                            <h2 class="mt-0 primary-black-text">Accept a join request</h2>  
                             <p>
                                 To accept this new member, please select their responsibility below.
                             </p>
@@ -91,12 +91,12 @@
             </div>
 
             <div class="w-70">
-                <h2 class="no-top-margin no-bottom-margin">{% firstof join_request.user_from.get_full_name join_request.user_from.username %}</h2>
+                <h2 class="mt-0 no-bottom-margin">{% firstof join_request.user_from.get_full_name join_request.user_from.username %}</h2>
                 {% if join_request.user_from.user_profile.position %}
-                    <h3 class="no-top-margin">{{ join_request.user_from.user_profile.position }}</h3>
+                    <h3 class="mt-0">{{ join_request.user_from.user_profile.position }}</h3>
                 {% endif %}
 
-                <h4 class="no-top-margin">
+                <h4 class="mt-0">
                     {{join_request.user_from.user_profile.get_location }}
                 </h4>
 
@@ -107,7 +107,7 @@
                         </div>
                         <div>
                             <small class="orange-text">Languages</small>
-                            <p class="no-top-margin">{{ join_request.user_from.user_profile.languages_spoken }}</p>
+                            <p class="mt-0">{{ join_request.user_from.user_profile.languages_spoken }}</p>
                         </div>
                     </div>
                 {% endif %}
@@ -119,7 +119,7 @@
                         </div>
                         <div>
                             <small class="orange-text">Affiliations</small>
-                            <p class="no-top-margin">{{ join_request.user_from.user_profile.affiliation }}</p>
+                            <p class="mt-0">{{ join_request.user_from.user_profile.affiliation }}</p>
                         </div>
                     </div>
                 {% endif %}
@@ -167,7 +167,7 @@
                 
                 {% if member_role == 'admin' %}
                     <div class="flex-this dash-btn-container flex-end">
-                        <div class="no-top-margin margin-right-8">
+                        <div class="mt-0 margin-right-8">
                             <a class="primary-btn white-btn" href="{% url 'delete-member-invite' invite.id %}">Cancel Invite</a>
                         </div>
                     </div>  
@@ -176,12 +176,12 @@
             </div>
 
             <div class="w-70">
-                <h2 class="no-top-margin no-bottom-margin">{% firstof invite.receiver.get_full_name invite.receiver.username %} </h2>
+                <h2 class="mt-0 no-bottom-margin">{% firstof invite.receiver.get_full_name invite.receiver.username %} </h2>
                 {% if invite.receiver.user_profile.position %}
-                    <h3 class="no-top-margin">{{ invite.receiver.user_profile.position }}</h3>
+                    <h3 class="mt-0">{{ invite.receiver.user_profile.position }}</h3>
                 {% endif %}
 
-                <h4 class="no-top-margin"> {{ invite.receiver.user_profile.get_location }} </h4>
+                <h4 class="mt-0"> {{ invite.receiver.user_profile.get_location }} </h4>
 
                 {% if invite.receiver.user_profile.languages_spoken %}
                     <div class="flex-this">
@@ -190,7 +190,7 @@
                         </div>
                         <div>
                             <small class="orange-text">Languages</small>
-                            <p class="no-top-margin">{{ invite.receiver.user_profile.languages_spoken }}</p>
+                            <p class="mt-0">{{ invite.receiver.user_profile.languages_spoken }}</p>
                         </div>
                     </div>
                 {% endif %}
@@ -202,7 +202,7 @@
                         </div>
                         <div>
                             <small class="orange-text">Affiliations</small>
-                            <p class="no-top-margin">{{ invite.receiver.user_profile.affiliation }}</p>
+                            <p class="mt-0">{{ invite.receiver.user_profile.affiliation }}</p>
                         </div>
                     </div>
                 {% endif %}
