--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -1,7 +1,7 @@
 <div class="content-card-v2 content-card-space">
     
     <div class="flex-this column w-60"><div><p class="p-28 bold">{{ project.title }}</p></div></div>
-    <div><p class="bold no-top-margin">{{ project.project_privacy }} Project</p></div>
+    <div><p class="bold mt-0">{{ project.project_privacy }} Project</p></div>
 
     <div class="flex-this margin-top-16">
         <div>
@@ -10,7 +10,7 @@
             </a>
         </div>
         <div class="ml-1p margin-top-10">
-            <p class="no-top-margin">
+            <p class="mt-0">
                 <span class="bold">Local Contexts Unique Project ID</span><br>
                 <span id="uniqueIDToCopy">{{ project.unique_id }}</span><br>
             </p>
@@ -25,7 +25,7 @@
                 </a>
             </div>
             <div class="ml-1p margin-top-10">
-                <p class="no-top-margin">
+                <p class="mt-0">
                     <span class="bold">Providers ID</span><br>
                     <span id="providersIDToCopy">{{ project.providers_id }}</span><br>
                 </p>
@@ -44,7 +44,7 @@
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                             <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                             <div class="w-80 pad-top-1">
-                                <h3 class="no-top-margin">Biocultural Notice</h3>
+                                <h3 class="mt-0">Biocultural Notice</h3>
                                 <p>{{ notice.default_text}}</p>
                             </div>
                         </div>
@@ -54,7 +54,7 @@
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                             <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                             <div class="w-80 pad-top-1">
-                                <h3 class="no-top-margin">Traditional Knowledge Notice</h3>
+                                <h3 class="mt-0">Traditional Knowledge Notice</h3>
                                 <p>{{ notice.default_text}}</p>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
                             <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line." width="78" height="78"></div>
                             <div class="w-80 pad-top-1">
-                                <h3 class="no-top-margin">Attribution Incomplete Notice</h3>
+                                <h3 class="mt-0">Attribution Incomplete Notice</h3>
                                 <p>{{ notice.default_text}}</p>
                             </div>
                         </div>
