--- a/templates/partials/_update-account-main-area.html
+++ b/templates/partials/_update-account-main-area.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="flex-this space-between">
-    <div><h3 class="no-top-margin">Account Information</h3></div>
+    <div><h3 class="mt-0">Account Information</h3></div>
     <div>Account ID:
         {% if community %} {{ community.id }} {% endif %}
         {% if institution %} {{ institution.id }} {% endif %}
