--- a/templates/partials/infocards/_user-dashcard.html
+++ b/templates/partials/infocards/_user-dashcard.html
@@ -3,12 +3,12 @@
 <section class="dash-driver flex-this column">
     <div class="flex-this space-between">
         <div class="w-70">
-            <h2 class="no-top-margin no-bottom-margin">{% display_name request.user %} </h2>
+            <h2 class="mt-0 no-bottom-margin">{% display_name request.user %} </h2>
             {% if affiliation %}
-                <h3 class="no-top-margin">{{ profile.affiliation }}</h3>
+                <h3 class="mt-0">{{ profile.affiliation }}</h3>
             {% endif %}
 
-            <h4 class="no-top-margin">{{ profile.get_location }}</h4>
+            <h4 class="mt-0">{{ profile.get_location }}</h4>
 
             {% if profile.languages_spoken %}
                 <div class="flex-this">
@@ -17,7 +17,7 @@
                     </div>
                     <div>
                         <small class="orange-text">Languages</small>
-                        <p class="no-top-margin">{{ profile.languages_spoken }}</p>
+                        <p class="mt-0">{{ profile.languages_spoken }}</p>
                     </div>
                 </div>
             {% endif %}
@@ -29,7 +29,7 @@
                     </div>
                     <div>
                         <small class="orange-text">Affiliations</small>
-                        <p class="no-top-margin">{{ profile.affiliation }}</p>
+                        <p class="mt-0">{{ profile.affiliation }}</p>
                     </div>
                 </div>
             {% endif %}
