--- a/templates/public.html
+++ b/templates/public.html
@@ -60,7 +60,7 @@
                                 <div class="w-100">
                                     <div class="flex-this space-between">
                                         <div class="w-80">
-                                            <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                            <h2 class="primary-black-text mt-0">Contact form</h2>  
                                             <p>This message will be sent to the administrator of {{ community.community_name }}.</p>  
                                         </div>
                                         <div>
@@ -215,7 +215,7 @@
                                 <div class="w-100">
                                     <div class="flex-this space-between">
                                         <div class="w-70">
-                                            <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                            <h2 class="primary-black-text mt-0">Contact form</h2>  
                                             <p>This message will be sent to the administrator of {{ institution.institution_name }}.</p>  
                                         </div>
                                         <div>
@@ -349,7 +349,7 @@
                             <div class="w-100">
                                 <div class="flex-this space-between">
                                     <div>
-                                        <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                        <h2 class="primary-black-text mt-0">Contact form</h2>  
                                         <p>This message will be sent to {% firstof researcher.user.get_full_name researcher.user.username %}.</p>  
                                     </div>
                                     <div>
@@ -460,7 +460,7 @@
                     <div>
                         <div class="flex-this space-between">
                             <div class="flex-this">
-                                <h2 class="primary-black-text no-top-margin">Request to join</h2>
+                                <h2 class="primary-black-text mt-0">Request to join</h2>
                             </div>
                             <div>
                                 <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
@@ -525,7 +525,7 @@
                                 </div>
 
                                 <div class="flex-this space-between margin-top-8 w-100">
-                                    <p class="w-70 no-top-margin">
+                                    <p class="w-70 mt-0">
                                         <small>By sending this request, you consent for your message and email address to be shared with account administrators.</small>
                                     </p>
                                     <div>
