--- a/templates/snippets/modals/leave-account-modal.html
+++ b/templates/snippets/modals/leave-account-modal.html
@@ -12,7 +12,7 @@
         <div class="w-100">
 
             <div>
-                <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                <h2 class="primary-black-text mt-0">Are you sure?</h2>  
                 <p>
                     Are you sure you want to leave 
                     {% if community %} {{ community.community_name }} {% endif %}
