--- a/templates/snippets/modals/remove-member-modal.html
+++ b/templates/snippets/modals/remove-member-modal.html
@@ -7,7 +7,7 @@
         <div class="w-100">
 
             <div>
-                <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                <h2 class="primary-black-text mt-0">Are you sure?</h2>  
                 <p>
                     Are you sure you want remove member 
                     {% if admin %} {% firstof  admin.get_full_name admin.username %} {% endif %}
